--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,11 @@
       <artifactId>junit</artifactId>
       <version>4.12</version>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+    </dependency>
     <!-- log end -->
   </dependencies>
   <build>
